--- a/style.css
+++ b/style.css
@@ -52,6 +52,18 @@ h1, h2, h3 {
     margin-bottom: 0;
     padding-bottom: 1em;
 }
+#email:before{
+content:'\2709';
+
+}
+#tel:before{
+    content: '';
+    width: 10px;
+    height: 10px;
+  
+}
+
+
 @media (min-width: 1000px){
     #mainLeft {
         border-right: 1px solid lightgray;
